--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,6 @@
   
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
         <groupId>org.glassfish.jersey.containers</groupId>
         <artifactId>jersey-container-servlet</artifactId>
         <version>2.23.2</version>
@@ -76,5 +70,17 @@
       <version>2.5</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.test-framework.providers/jersey-test-framework-provider-grizzly2 -->
+	<dependency>
+    	<groupId>org.glassfish.jersey.test-framework.providers</groupId>
+    	<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+    	<version>2.25</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/junit/junit -->
+	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.8.2</version>
+	</dependency>
   </dependencies>
 </project>
